# RustScribe

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/extractors/: direct.rs  local.rs  mod.rs  twitter.rs  youtube.rs
src/output/: formatters.rs  mod.rs
src/transcribe/: mod.rs  processor.rs
src/utils/: mod.rs
